--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ToDo List App</title>
+  <title>To-Do List with Affirmations</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>My ToDo Listt App</h1>
+  <div class="app">
+    <h2>To-Do List</h2>
+    <div class="affirmation" id="affirmation"></div>
+    <div class="input-box">
+      <input type="text" id="taskInput" placeholder="Enter a task">
+      <button onclick="addTask()">Add</button>
+    </div>
+
+    <ul id="taskList"></ul>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
